--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -19,7 +19,7 @@
 
   <section id="welcome">
     <header>
-      <img src="" alt="Bart - The Author Of This Blog" />
+      <img src="{% static "blog/images/max.png" %}" alt="Bart - The Author Of This Blog" />
       <h2>BART'S BLOG</h2>
     </header>
     <p>HI, I AM BART AND I LOVE TO LOG ABOUT TECH AND THE WORLD!</p>
@@ -32,7 +32,7 @@
       <li>
         <article class="post">
           <a href="">
-            <img src="" alt="Mountain Hiking" />
+            <img src="{% static "blog/images/mountain.jpg" %}" alt="Mountain Hiking" />
 
             <div class="post__content">
               <h3>Mountain Hiking</h3>
