--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,13 +10,6 @@
 {% endblock %}
 
 {% block content %}
-  <header id="main-navigation">
-    <h1><a href="">Bart's Blog</a></h1>
-    <nav>
-      <a href="">All Posts</a>
-    </nav>
-  </header>
-
   <section id="welcome">
     <header>
       <img src="{% static "blog/images/max.png" %}" alt="Bart - The Author Of This Blog" />
@@ -29,22 +22,7 @@
     <h2>My Latest Thoughts</h2>
 
     <ul>
-      <li>
-        <article class="post">
-          <a href="">
-            <img src="{% static "blog/images/mountain.jpg" %}" alt="Mountain Hiking" />
-
-            <div class="post__content">
-              <h3>Mountain Hiking</h3>
-              <p>
-                THere's nothing like the views you get when hiking in the
-                mountains! and I wasn't even prepared for what happed whilst I was
-                enjoing the view!
-              </p>
-            </div>
-          </a>
-        </article>
-      </li>
+      {% include "blog/includes/post.html" %}
     </ul>
   </section>
 
