--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,12 @@
     {% block css_files %}{% endblock %}
   </head>
   <body>
+    <header id="main-navigation">
+      <h1><a href="{% url "index" %}">Bart's Blog</a></h1>
+      <nav>
+        <a href="{% url "posts" %}">All Posts</a>
+      </nav>
+    </header>
     {% block content %}{% endblock%}
   </body>
 </html>
