--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,21 +10,65 @@
 {% endblock %} 
 
 {% block content %}
-<section id="summary">
-  <h2>{{ post.title }}</h2>
+  {% if form.errors %}
+    <div id="alert">
+      <h2>Saving comment failed!!</h2>
+      <p>Please check the comment form below the post and fix your errors.</p>
+      <a href="#comment-form">Fix</a>
+    </div>
+  {% endif %}
+
+  <section id="summary">
+    <h2>{{ post.title }}</h2>
     <div>
       {% for tag in post_tags %}
         <span class="tag">{{ tag.caption }}</span>
       {% endfor %}
     </div>
-  <article>
-    <img src="{{ post.image.url }}" alt="{{ post.title }}" />
-    <address>By <a href="mailto:{{ post.author.email_address }}">{{ post.author }}</a></address>
-    <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div>
-  </article>
-</section>
+    <div id="read-later">
+      <form action="{% url "read-later" %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="post_id" value={{ post.id }}>
+        <button>Read Later</button>
+      </form>
+    </div>
+    <article>
+      <img src="{{ post.image.url }}" alt="{{ post.title }}" />
+      <address>By <a href="mailto:{{ post.author.email_address }}">{{ post.author }}</a></address>
+      <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div>
+    </article>
+  </section>
 
-<main>
-  {{ post.content|linebreaks }}
-</main>
+  <main>
+    {{ post.content|linebreaks }}
+  </main>
+
+  {% if comments %}
+    <section id="comments">
+      <ul>
+        {% for comment in comments %}
+          <li>
+            <h2>{{ comment.user_name }}</h2>
+            <p>{{ comment.text|linebreaks }}</p>
+          </li>
+        {% endfor %}
+      </ul>
+    </section>
+  {% endif %}
+
+  <section id="comment-form">
+    <form action="{% url 'post' post.slug %}" method="POST">
+      {% csrf_token %}
+      {% for field in form %}
+        <div class="form-control{% if field.errors %} invalid{% endif %}">
+          {{ field.label_tag }}
+          {{ field }}
+          {{ field.errors }}
+        </div>
+      {% endfor %}
+
+      <button>Comment!</button>
+    </form>
+  </section> 
+
 {% endblock %}
