--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <header id="main-navigation">
       <h1><a href="{% url "index" %}">Bart's Blog</a></h1>
       <nav>
+        <a href="{% url "read-later" %}">Stored Posts</a>
         <a href="{% url "posts" %}">All Posts</a>
       </nav>
     </header>
