--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -29,7 +29,11 @@
       <form action="{% url "read-later" %}" method="POST">
         {% csrf_token %}
         <input type="hidden" name="post_id" value={{ post.id }}>
-        <button>Read Later</button>
+        {% if is_saved_for_later  %}
+          <button>Remove from "Read Later" List</button>
+        {% else %}
+          <button>Read Later</button>
+        {% endif %}
       </form>
     </div>
     <article>
