--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -12,7 +12,7 @@
 {% block content %}
   <section id="welcome">
     <header>
-      <img src="https://portfolio-git-main-byeongjae-kang.vercel.app/0956c50a3ed1b0bf8916.png" alt="Bart - The Author Of This Blog" />
+      <img src="https://firebasestorage.googleapis.com/v0/b/portfolio-images-2e220.appspot.com/o/images%2Fintro.png?alt=media&token=3d33a835-105a-4b7c-bad6-655fa9fb2fa1" alt="Bart - The Author Of This Blog" />
       <h2>BART'S BLOG</h2>
     </header>
     <p>HI, I AM BART AND I LOVE TO LOG ABOUT TECH AND THE WORLD!</p>
